# scout_mini_ros2_dev

./: README.md  network_config.md
ansible/: passwords.yaml  robot_ubuntu_playbook.yaml
ansible/tasks/: docker.yaml  general_so_config.yaml  main-packages.yaml  power-management.yaml  swap_config.yaml
robot_ubuntu_ansible/: robot_ubuntu.yaml  robot_ubuntu_playbook.yaml
robot_ubuntu_ansible/tasks/: docker.yaml  git.yaml  main-packages.yaml  nvidia-toolkit.yaml  nvtop.yaml  other-packages.yaml  power-management.yaml  timezone.yaml  ubuntu-restricted-extras.yaml  user_config.yaml
ros2_packages/FAST_LIO_ROS2/include/ikd-Tree/: ikd_Tree.cpp  ikd_Tree.h
ros2_packages/fiber_tether/: CMakeLists.txt  README.md  package.xml
ros2_packages/fiber_tether/msg/: BatteryMonitorStatus.msg
ros2_packages/fiber_tether/script/: battery_monitor_node.py  tether_motor_controller_node.py
ros2_packages/fiber_tether/scripts/: battery_monitor_node.py  dynamixel_motor.py  motor_controller_node.py
ros2_packages/scout_init/: CMakeLists.txt  package.xml
ros2_packages/scout_init/config/: MID360_config.json  display_point_cloud_ROS2.rviz  fastlio_velodyne_sim.yaml  sim.fastlio_velodyne.yaml
ros2_packages/scout_init/launch/: mapping.launch.py  sim.mapping.launch.py
ros2_packages/scout_init/rviz/: fastlio.rviz
ros2_packages/scout_nav2/agilex_scout/: CMakeLists.txt  package.xml
ros2_packages/scout_nav2/agilex_scout/config/: ros2_gz_bridge_config.yaml  sim.ekf.yaml
ros2_packages/scout_nav2/agilex_scout/rviz/: model_display.rviz
ros2_packages/scout_nav2/scout_nav2/: package.xml
(+10 files in other folders)
